2005-04-30  Jonathan Pryor  <jonpryor@vt.edu>

	* stdio.c: Add Mono_Posix_Stdlib_DumpFilePosition, which create a hex string
	  "dump" of a fpos_t.  This is used for Mono.Unix.FilePosition.ToString().

2005-04-19  Jonathan Pryor  <jonpryor@vt.edu>

	* map.c, map.h: Added XattrFlags values, functions.
	* sys-xattr.c: Added; <sys/xattr.h> wrapper functions.  Thanks to Daniel
	  Drake for writing these.
	* Makefile.am: Add sys-xattr.c to the build.

2005-04-07  Jonathan Pryor  <jonpryor@vt.edu>

	* errno.c: Use the GNU version of strerror_r if _GNU_SOURCE is defined
	  (otherwise assume existence of XPG variant).  This allows proper
	  compilation under Red Hat 9.
	* fstab.c: protect against users calling setfsent(), setfsent(), ...  
	  endfsent(), which would otherwise leak a FILE handle.

2005-04-05  Zoltan Varga  <vargaz@freemail.hu>

	* mph.h: Apply patch from the freebsd ports collection.

2005-02-10  Zoltan Varga  <vargaz@freemail.hu>

	* zlib_macros.c (create_z_stream): Explicitly check for older versions
	of zlib.

2005-02-08  Zoltan Varga  <vargaz@freemail.hu>

	* pwd.c (Mono_Posix_Syscall_getpwnam_r): Add another part missing from the last patch.

2005-02-07  Jonathan Pryor  <jonpryor@vt.edu>

	* grp.c: Oops.  Didn't see other Solaris fix in #72292.

2005-02-07  Jonathan Pryor  <jonpryor@vt.edu>

	* grp.c, pwd.c: Clear errno before calling the actual calls, as errno may
	  have a stale value, leading to spurious errors later.  Fixes #72292.

2005-02-03  Jonathan Pryor  <jonpryor@vt.edu>

	* Makefile.am (MPH_C_SOURCE): Move errno.c into MPH_C_SOURCE, so it's built
	  on Windows as well as Unix.

2005-02-03  Jonathan Pryor  <jonpryor@vt.edu>

	* errno.c: Mono_Posix_Syscall_SetLastError should be in Stdlib, not Syscall, 
	  since it's part of ANSI C (and errno will be used from StdioFileStream).  
	  Add Mono_Posix_Stdlib_SetLastError.  Don't remove the Syscall version, as 
	  we don't want to break Mono 1.1.4/svn users the day after release. :-)
